--- a/docs/scss/colors.scss
+++ b/docs/scss/colors.scss
@@ -6,3 +6,10 @@ $linkHover: #2bd3f8;
 $linkVisited: #1b4e7d;
 
 $boxShadow: #9d9d9d;
+
+@import url("https://fonts.googleapis.com/css?family=Lato|Noto+Sans+JP|Noto+Serif+JP|Playfair+Display");
+
+$notoSans: "Noto Sans JP", sans-serif;
+$notoSerif: "Noto Serif JP", serif;
+$lato: "Lato", sans-serif;
+$playfair: "Playfair Display", serif;
