--- a/docs/scss/layouts.scss
+++ b/docs/scss/layouts.scss
@@ -3,13 +3,14 @@
 }
 
 .l-display-flex {
-  max-width: 1300px;
-  margin: 64px auto;
+  width: 80vw;
+  margin: 6vw auto;
   display: flex;
 }
 
 .l-profile-wrapper {
   flex: 1;
+  max-width: 500px;
 }
 
 .l-contents-wrapper {
@@ -17,20 +18,24 @@
 }
 
 .l-profile-box {
-  width: 80%;
+  max-width: 400px;
   margin: 0 auto;
+  padding: 0 26px 0 0;
 }
 
 .l-contents-flex {
-  width: 80%;
   margin: 0 auto;
   display: flex;
+  justify-content: center;
 }
 
 .l-contents-box-left {
-  flex: 1;
+  width: 18vw;
 }
 
+.l-contents-box-mgn {
+  width: 4vw;
+}
 .l-contents-box-right {
-  flex: 1;
+  width: 18vw;
 }
