--- a/docs/scss/utilities.scss
+++ b/docs/scss/utilities.scss
@@ -1,3 +1,12 @@
+.u-border {
+  border-right: 6px solid #000;
+  border-bottom: 6px solid #000;
+}
+
+.u-border-content {
+  border-left: 6px solid #000;
+}
+
 .u-pdg-64-btm {
   padding-bottom: 64px;
 }
