--- a/docs/scss/layouts.scss
+++ b/docs/scss/layouts.scss
@@ -2,40 +2,52 @@
   width: 100%;
 }
 
-.l-display-flex {
-  width: 80vw;
-  margin: 6vw auto;
-  display: flex;
+.l-link-top {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  margin-right: 8vw;
+  margin-bottom: -80px;
 }
 
-.l-profile-wrapper {
-  flex: 1;
-  max-width: 500px;
-}
-
-.l-contents-wrapper {
-  flex: 2;
-}
-
-.l-profile-box {
-  max-width: 400px;
+.l-header-grid {
+  width: 84vw;
+  height: 48vw;
   margin: 0 auto;
-  padding: 0 26px 0 0;
+  display: grid;
+  grid-template-rows: 24vw 1fr;
+  grid-template-columns: calc(48vw - 3px) 1fr;
+}
+
+.l-header-profile-box {
+  grid-row: 1 / 3;
+  grid-column: 1 / 2;
+}
+
+.l-header-content-upper-box {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+}
+
+.l-header-content-lower-box {
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
 }
 
 .l-contents-flex {
+  width: 84vw;
   margin: 0 auto;
   display: flex;
   justify-content: center;
 }
 
 .l-contents-box-left {
-  width: 18vw;
+  width: 24vw;
 }
 
-.l-contents-box-mgn {
-  width: 4vw;
+.l-contents-box-middle {
+  width: 24vw;
 }
 .l-contents-box-right {
-  width: 18vw;
+  width: 36vw;
 }
