--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -149,15 +149,17 @@ prefix: .l-
   position: fixed;
   bottom: 0;
   right: 0;
-  margin-right: 8vw;
-  margin-bottom: -80px; }
+  margin-right: 3vw;
+  margin-bottom: 32px;
+  z-index: 10; }
 
 .l-header-grid {
   width: 84vw;
   height: 48vw;
+  max-height: 48vw;
   margin: 0 auto;
   display: grid;
-  grid-template-rows: 24vw 1fr;
+  grid-template-rows: 24vw 24vw;
   grid-template-columns: calc(48vw - 3px) 1fr; }
 
 .l-header-profile-box {
@@ -176,7 +178,8 @@ prefix: .l-
   width: 84vw;
   margin: 0 auto;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  z-index: 5; }
 
 .l-contents-box-left {
   width: 24vw; }
@@ -210,21 +213,20 @@ projects
 prefix: .c-
 */
 html {
-  background-color: #fff; }
+  background-color: #41b883; }
 
 .p-link-top {
-  width: 160px;
-  height: 160px;
-  border-radius: 50%;
-  background-color: #0759d4; }
+  width: 192px;
+  height: 128px;
+  background-color: #41b883; }
   .p-link-top a {
     color: #fff;
     font-family: "Lato", sans-serif;
     font-size: 56px;
     font-weight: 900;
     position: absolute;
-    top: 26px;
-    left: 26px; }
+    top: 36px;
+    left: 46px; }
 
 .p-h-profile-box {
   border-top: 6px solid #000;
@@ -298,10 +300,13 @@ html {
   font-family: "Noto Sans JP", sans-serif;
   font-size: 16px;
   font-weight: 100;
-  color: #6b6b6b;
+  color: #000;
   padding: 16px; }
 
 .p-c-box-img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   object-fit: cover; }
 
 /*
@@ -310,10 +315,10 @@ prefix: .u-
 
 */
 .u-border {
-  border-right: 6px solid #000;
-  border-bottom: 6px solid #000; }
+  border-right: 6px solid #000; }
 
 .u-border-content {
+  border-top: 6px solid #000;
   border-left: 6px solid #000; }
 
 .u-pdg-64-btm {
