--- a/docs/scss/utilities.scss
+++ b/docs/scss/utilities.scss
@@ -1,9 +1,9 @@
 .u-border {
   border-right: 6px solid #000;
-  border-bottom: 6px solid #000;
 }
 
 .u-border-content {
+  border-top: 6px solid #000;
   border-left: 6px solid #000;
 }
 
