--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -149,7 +149,6 @@ prefix: .l-
   position: fixed;
   bottom: 0;
   right: 0;
-  margin-right: 3vw;
   margin-bottom: 32px;
   z-index: 10; }
 
@@ -218,15 +217,18 @@ html {
 .p-link-top {
   width: 192px;
   height: 128px;
-  background-color: #41b883; }
-  .p-link-top a {
+  background-color: #41b883;
+  text-align: center; }
+  .p-link-top img {
+    margin-top: 20px;
+    width: 40px;
+    height: 40px; }
+  .p-link-top span {
     color: #fff;
     font-family: "Lato", sans-serif;
-    font-size: 56px;
+    font-size: 48px;
     font-weight: 900;
-    position: absolute;
-    top: 36px;
-    left: 46px; }
+    margin-left: -5px; }
 
 .p-h-profile-box {
   border-top: 6px solid #000;
@@ -255,59 +257,104 @@ html {
   color: #000;
   margin-bottom: 96px; }
 
-.p-h-history {
+.p-h-history-wrapper {
+  display: flex; }
+
+.p-h-history-title {
   font-family: "Noto Sans JP", sans-serif;
   color: #000; }
-  .p-h-history h3 {
+  .p-h-history-title h3 {
     font-size: 24px;
-    margin-bottom: 16px; }
-  .p-h-history h4 {
-    font-size: 24px;
-    margin-bottom: 32px; }
-  .p-h-history p {
+    font-weight: 900;
+    margin: 4px auto 16px; }
+  .p-h-history-title h4 {
     font-size: 16px;
-    line-height: 2em; }
+    margin-bottom: 32px; }
+
+.p-h-history-detail {
+  flex: 1;
+  font-family: "Noto Sans JP", sans-serif;
+  color: #000;
+  padding-left: 40px;
+  font-size: 16px;
+  line-height: 1.8em; }
 
 .p-h-upper-box {
-  background-color: #fadf09;
+  position: relative;
   border-top: 6px solid #000;
-  border-left: 6px solid #000; }
+  border-left: 6px solid #000;
+  overflow: hidden; }
 
 .p-h-lower-box {
-  background-color: aqua;
+  position: relative;
   border-top: 6px solid #000;
-  border-left: 6px solid #000; }
+  border-left: 6px solid #000;
+  overflow: hidden; }
 
 .p-c-box-1 {
+  position: relative;
   background-color: #fadf09;
   height: 18vw;
   border-right: 6px solid #000;
-  border-bottom: 6px solid #000; }
+  border-bottom: 6px solid #000;
+  overflow: hidden; }
 
 .p-c-box-2 {
-  background-color: #d09eae;
+  position: relative;
+  background-color: #9287f3;
   height: 24vw;
   border-right: 6px solid #000;
-  border-bottom: 6px solid #000; }
+  border-bottom: 6px solid #000;
+  overflow: hidden; }
 
 .p-c-box-3 {
-  background-color: #effdea;
+  position: relative;
+  background-color: #2aa7c7;
   height: 36vw;
   border-right: 6px solid #000;
-  border-bottom: 6px solid #000; }
+  border-bottom: 6px solid #000;
+  overflow: hidden; }
 
 .p-c-box-text {
   font-family: "Noto Sans JP", sans-serif;
   font-size: 16px;
   font-weight: 100;
   color: #000;
-  padding: 16px; }
+  padding: 16px;
+  line-height: 1.5em; }
 
 .p-c-box-img {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  object-fit: cover; }
+  object-fit: cover;
+  transition-duration: 0.3s; }
+
+.p-u-hover-comment {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  font-family: "Noto Sans JP", sans-serif;
+  font-size: 16px;
+  line-height: 1.5em;
+  background: rgba(255, 255, 255, 0.9);
+  color: #000;
+  padding: 16px;
+  cursor: pointer;
+  transition: all 0.2s ease-out;
+  opacity: 0; }
+
+.p-u-hover-comment:hover {
+  opacity: 1; }
+
+.p-u-scale {
+  cursor: pointer; }
+
+.p-u-scale:hover {
+  transform: scale(1.1); }
 
 /*
 projects
