--- a/docs/scss/projects.scss
+++ b/docs/scss/projects.scss
@@ -6,14 +6,18 @@ html {
   width: 192px;
   height: 128px;
   background-color: $vuecolor;
-  a {
+  text-align: center;
+  img {
+    margin-top: 20px;
+    width: 40px;
+    height: 40px;
+  }
+  span {
     color: #fff;
     font-family: $lato;
-    font-size: 56px;
+    font-size: 48px;
     font-weight: 900;
-    position: absolute;
-    top: 36px;
-    left: 46px;
+    margin-left: -5px;
   }
 }
 
@@ -47,50 +51,67 @@ html {
   margin-bottom: 96px;
 }
 
-.p-h-history {
+.p-h-history-wrapper {
+  display: flex;
+}
+
+.p-h-history-title {
   font-family: $notoSans;
   color: $black;
-
   h3 {
     font-size: 24px;
-    margin-bottom: 16px;
+    font-weight: 900;
+    margin: 4px auto 16px;
   }
   h4 {
-    font-size: 24px;
+    font-size: 16px;
     margin-bottom: 32px;
   }
-  p {
-    font-size: 16px;
-    line-height: 2em;
-  }
+}
+
+.p-h-history-detail {
+  flex: 1;
+  font-family: $notoSans;
+  color: $black;
+  padding-left: 40px;
+  font-size: 16px;
+  line-height: 1.8em;
 }
 
 .p-h-upper-box {
-  background-color: #fadf09;
+  position: relative;
   @include border;
+  overflow: hidden;
 }
 
 .p-h-lower-box {
-  background-color: aqua;
+  position: relative;
   @include border;
+  overflow: hidden;
 }
 
 .p-c-box-1 {
+  position: relative;
   background-color: #fadf09;
   height: 18vw;
   @include border-content;
+  overflow: hidden;
 }
 
 .p-c-box-2 {
-  background-color: #d09eae;
+  position: relative;
+  background-color: #9287f3;
   height: 24vw;
   @include border-content;
+  overflow: hidden;
 }
 
 .p-c-box-3 {
-  background-color: #effdea;
+  position: relative;
+  background-color: #2aa7c7;
   height: 36vw;
   @include border-content;
+  overflow: hidden;
 }
 
 .p-c-box-text {
@@ -99,6 +120,7 @@ html {
   font-weight: 100;
   color: $black;
   padding: 16px;
+  line-height: 1.5em;
 }
 
 .p-c-box-img {
@@ -106,4 +128,35 @@ html {
   height: 100%;
   overflow: hidden;
   object-fit: cover;
+  transition-duration: 0.3s;
+}
+
+.p-u-hover-comment {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  font-family: $notoSans;
+  font-size: 16px;
+  line-height: 1.5em;
+  background: rgba(255, 255, 255, 0.9);
+  color: $black;
+  padding: 16px;
+  cursor: pointer;
+  transition: all 0.2s ease-out;
+  opacity: 0;
+}
+
+.p-u-hover-comment:hover {
+  opacity: 1;
+}
+
+.p-u-scale {
+  cursor: pointer;
+}
+
+.p-u-scale:hover {
+  transform: scale(1.1);
 }
