--- a/docs/scss/styles.scss
+++ b/docs/scss/styles.scss
@@ -6,9 +6,10 @@ reset the style
 
 /*
 colors, font-styles
+contains all variables & mixins
 ========================================================
 */
-@import "./docs/scss/colors.scss";
+@import "./docs/scss/variables.scss";
 
 /*
 layout of the window
