--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
 reset the style
 ========================================================
@@ -135,6 +136,7 @@ textarea {
 
 /*
 colors, font-styles
+contains all variables & mixins
 ========================================================
 */
 /*
@@ -153,13 +155,15 @@ prefix: .l-
   z-index: 10; }
 
 .l-header-grid {
-  width: 84vw;
-  height: 48vw;
-  max-height: 48vw;
+  width: 100vw;
+  height: 40vw;
+  max-width: 2000px;
+  max-height: 800px;
   margin: 0 auto;
   display: grid;
-  grid-template-rows: 24vw 24vw;
-  grid-template-columns: calc(48vw - 3px) 1fr; }
+  grid-template-rows: 50% 50%;
+  grid-template-columns: 60% 1fr;
+  overflow: hidden; }
 
 .l-header-profile-box {
   grid-row: 1 / 3;
@@ -174,20 +178,48 @@ prefix: .l-
   grid-column: 2 / 3; }
 
 .l-contents-flex {
-  width: 84vw;
+  width: 100vw;
+  max-width: 2000px;
   margin: 0 auto;
   display: flex;
   justify-content: center;
   z-index: 5; }
 
 .l-contents-box-left {
-  width: 24vw; }
+  width: 30%; }
 
 .l-contents-box-middle {
-  width: 24vw; }
+  width: 30%; }
 
 .l-contents-box-right {
-  width: 36vw; }
+  width: 40%; }
+
+@media screen and (max-width: 800px) {
+  .l-header-grid {
+    width: 100%;
+    height: auto;
+    max-height: none;
+    display: block;
+    overflow: hidden; }
+  .l-header-profile-box {
+    width: 100%;
+    height: auto; }
+  .l-header-content-upper-box {
+    width: 100%;
+    height: auto; }
+  .l-header-content-lower-box {
+    width: 100%;
+    height: auto; }
+  .l-contents-flex {
+    width: 100%;
+    margin: 0 auto;
+    display: block; }
+  .l-contents-box-left {
+    width: 100%; }
+  .l-contents-box-middle {
+    width: 100%; }
+  .l-contents-box-right {
+    width: 100%; } }
 
 /*
 objects
@@ -212,8 +244,12 @@ projects
 prefix: .c-
 */
 html {
-  background-color: #41b883; }
+  background-color: #fff; }
 
+/*
+======================================
+back to top button
+*/
 .p-link-top {
   width: 192px;
   height: 128px;
@@ -230,17 +266,21 @@ html {
     font-weight: 900;
     margin-left: -5px; }
 
+/*
+======================================
+header profile area
+*/
 .p-h-profile-box {
   border-top: 6px solid #000;
   border-left: 6px solid #000;
   background-color: #fff;
-  padding-left: 16px; }
+  padding-left: 2vw; }
 
 .p-h-english-name {
   font-family: "Lato", sans-serif;
   font-size: 96px;
   line-height: 1.2em;
-  margin: 0 auto 8px -3px;
+  margin: 1vw auto 8px -3px;
   color: #000; }
 
 .p-h-japanese-name {
@@ -291,10 +331,15 @@ html {
   border-left: 6px solid #000;
   overflow: hidden; }
 
+/*
+======================================
+contains area
+*/
 .p-c-box-1 {
   position: relative;
   background-color: #fadf09;
-  height: 18vw;
+  height: 20vw;
+  max-height: 400px;
   border-right: 6px solid #000;
   border-bottom: 6px solid #000;
   overflow: hidden; }
@@ -302,7 +347,8 @@ html {
 .p-c-box-2 {
   position: relative;
   background-color: #9287f3;
-  height: 24vw;
+  height: 30vw;
+  max-height: 600px;
   border-right: 6px solid #000;
   border-bottom: 6px solid #000;
   overflow: hidden; }
@@ -310,12 +356,17 @@ html {
 .p-c-box-3 {
   position: relative;
   background-color: #2aa7c7;
-  height: 36vw;
+  height: 40vw;
+  max-height: 800px;
   border-right: 6px solid #000;
   border-bottom: 6px solid #000;
   overflow: hidden; }
 
-.p-c-box-text {
+/*
+======================================
+universal
+*/
+.p-u-box-text {
   font-family: "Noto Sans JP", sans-serif;
   font-size: 16px;
   font-weight: 100;
@@ -323,12 +374,31 @@ html {
   padding: 16px;
   line-height: 1.5em; }
 
-.p-c-box-img {
+.p-u-box-title {
+  font-family: "Noto Sans JP", sans-serif;
+  color: #000;
+  padding: 16px;
+  line-height: 2em;
+  cursor: pointer; }
+  .p-u-box-title h3 {
+    font-size: 36px;
+    font-weight: 900;
+    margin-bottom: 24px; }
+  .p-u-box-title p {
+    font-size: 16px;
+    font-weight: 100; }
+
+.p-u-box-title:hover {
+  background-color: #41b883;
+  color: #fff;
+  transition: all 0.2s ease-in-out; }
+
+.p-u-box-img {
   width: 100%;
   height: 100%;
   overflow: hidden;
   object-fit: cover;
-  transition-duration: 0.3s; }
+  transition: all 0.2s ease-in-out; }
 
 .p-u-hover-comment {
   position: absolute;
@@ -340,11 +410,11 @@ html {
   font-family: "Noto Sans JP", sans-serif;
   font-size: 16px;
   line-height: 1.5em;
-  background: rgba(255, 255, 255, 0.9);
-  color: #000;
+  background: #41b883;
+  color: #fff;
   padding: 16px;
   cursor: pointer;
-  transition: all 0.2s ease-out;
+  transition: all 0.2s ease-in-out;
   opacity: 0; }
 
 .p-u-hover-comment:hover {
@@ -355,6 +425,66 @@ html {
 
 .p-u-scale:hover {
   transform: scale(1.1); }
+
+/*
+=============================================================
+Media query
+*/
+@media screen and (max-width: 1260px) {
+  /*　画面サイズが1260pxまではここを読み込む　*/
+  .p-h-english-name {
+    font-size: 32px; }
+  .p-h-japanese-name {
+    font-size: 28px;
+    margin-bottom: 8px; }
+  .p-h-email {
+    font-size: 16px;
+    margin-bottom: 24px; }
+  .p-h-history-wrapper {
+    display: block; }
+  .p-h-history-title h3 {
+    font-size: 16px;
+    font-weight: 900;
+    margin: 4px auto 8px; }
+  .p-h-history-title h4 {
+    font-size: 16px;
+    margin-bottom: 16px; }
+  .p-h-history-detail {
+    padding-left: 0px;
+    font-size: 14px;
+    line-height: 1.5em;
+    padding-bottom: 16px; }
+  .p-u-box-text {
+    font-size: 14px;
+    padding: 8px;
+    line-height: 1.3em; }
+  .p-u-box-title {
+    padding: 8px; }
+    .p-u-box-title h3 {
+      font-size: 24px;
+      margin-bottom: 16px; }
+    .p-u-box-title p {
+      font-size: 14px; }
+  .p-u-hover-comment {
+    font-size: 14px;
+    line-height: 1.3em;
+    padding: 8px; } }
+
+@media screen and (max-width: 800px) {
+  .p-c-box-1 {
+    height: 60vw; }
+  .p-c-box-2 {
+    height: 80vw; }
+  .p-c-box-3 {
+    height: 100vw; }
+  .p-u-hover-comment {
+    position: absolute;
+    left: 50%;
+    width: 50%;
+    opacity: 1;
+    color: #000;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-left: 6px solid #000; } }
 
 /*
 projects
@@ -373,3 +503,8 @@ prefix: .u-
 
 .u-mgn-2vw-btm {
   margin-bottom: 2vw; }
+
+@media screen and (max-width: 1260px) {
+  /*　画面サイズが1260pxまではここを読み込む　*/
+  .u-pdg-64-btm {
+    padding-bottom: 8px; } }
