--- a/docs/scss/projects.scss
+++ b/docs/scss/projects.scss
@@ -1,6 +1,11 @@
 html {
-  background-color: $vuecolor;
+  background-color: #fff;
 }
+
+/*
+======================================
+back to top button
+*/
 
 .p-link-top {
   width: 192px;
@@ -21,17 +26,22 @@ html {
   }
 }
 
+/*
+======================================
+header profile area
+*/
+
 .p-h-profile-box {
   @include border;
   background-color: #fff;
-  padding-left: 16px;
+  padding-left: 2vw;
 }
 
 .p-h-english-name {
   font-family: $lato;
   font-size: 96px;
   line-height: 1.2em;
-  margin: 0 auto 8px -3px;
+  margin: 1vw auto 8px -3px;
   color: $black;
 }
 
@@ -90,10 +100,16 @@ html {
   overflow: hidden;
 }
 
+/*
+======================================
+contains area
+*/
+
 .p-c-box-1 {
   position: relative;
   background-color: #fadf09;
-  height: 18vw;
+  height: 20vw;
+  max-height: 400px;
   @include border-content;
   overflow: hidden;
 }
@@ -101,7 +117,8 @@ html {
 .p-c-box-2 {
   position: relative;
   background-color: #9287f3;
-  height: 24vw;
+  height: 30vw;
+  max-height: 600px;
   @include border-content;
   overflow: hidden;
 }
@@ -109,12 +126,18 @@ html {
 .p-c-box-3 {
   position: relative;
   background-color: #2aa7c7;
-  height: 36vw;
+  height: 40vw;
+  max-height: 800px;
   @include border-content;
   overflow: hidden;
 }
 
-.p-c-box-text {
+/*
+======================================
+universal
+*/
+
+.p-u-box-text {
   font-family: $notoSans;
   font-size: 16px;
   font-weight: 100;
@@ -123,12 +146,35 @@ html {
   line-height: 1.5em;
 }
 
-.p-c-box-img {
+.p-u-box-title {
+  font-family: $notoSans;
+  color: $black;
+  padding: 16px;
+  line-height: 2em;
+  cursor: pointer;
+  h3 {
+    font-size: 36px;
+    font-weight: 900;
+    margin-bottom: 24px;
+  }
+  p {
+    font-size: 16px;
+    font-weight: 100;
+  }
+}
+
+.p-u-box-title:hover {
+  background-color: $vuecolor;
+  color: #fff;
+  transition: $transition;
+}
+
+.p-u-box-img {
   width: 100%;
   height: 100%;
   overflow: hidden;
   object-fit: cover;
-  transition-duration: 0.3s;
+  transition: $transition;
 }
 
 .p-u-hover-comment {
@@ -141,11 +187,11 @@ html {
   font-family: $notoSans;
   font-size: 16px;
   line-height: 1.5em;
-  background: rgba(255, 255, 255, 0.9);
-  color: $black;
+  background: $vuecolor;
+  color: #fff;
   padding: 16px;
   cursor: pointer;
-  transition: all 0.2s ease-out;
+  transition: $transition;
   opacity: 0;
 }
 
@@ -159,4 +205,95 @@ html {
 
 .p-u-scale:hover {
   transform: scale(1.1);
+}
+
+/*
+=============================================================
+Media query
+*/
+
+@media screen and (max-width: 1260px) {
+  /*　画面サイズが1260pxまではここを読み込む　*/
+  .p-h-english-name {
+    font-size: 32px;
+  }
+
+  .p-h-japanese-name {
+    font-size: 28px;
+    margin-bottom: 8px;
+  }
+
+  .p-h-email {
+    font-size: 16px;
+    margin-bottom: 24px;
+  }
+
+  .p-h-history-wrapper {
+    display: block;
+  }
+
+  .p-h-history-title {
+    h3 {
+      font-size: 16px;
+      font-weight: 900;
+      margin: 4px auto 8px;
+    }
+    h4 {
+      font-size: 16px;
+      margin-bottom: 16px;
+    }
+  }
+
+  .p-h-history-detail {
+    padding-left: 0px;
+    font-size: 14px;
+    line-height: 1.5em;
+    padding-bottom: 16px;
+  }
+
+  .p-u-box-text {
+    font-size: 14px;
+    padding: 8px;
+    line-height: 1.3em;
+  }
+
+  .p-u-box-title {
+    padding: 8px;
+    h3 {
+      font-size: 24px;
+      margin-bottom: 16px;
+    }
+    p {
+      font-size: 14px;
+    }
+  }
+
+  .p-u-hover-comment {
+    font-size: 14px;
+    line-height: 1.3em;
+    padding: 8px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .p-c-box-1 {
+    height: 60vw;
+  }
+
+  .p-c-box-2 {
+    height: 80vw;
+  }
+
+  .p-c-box-3 {
+    height: 100vw;
+  }
+  .p-u-hover-comment {
+    position: absolute;
+    left: 50%;
+    width: 50%;
+    opacity: 1;
+    color: $black;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-left: 6px solid $black;
+  }
 }
