--- a/docs/scss/projects.scss
+++ b/docs/scss/projects.scss
@@ -12,6 +12,7 @@ back to top button
   height: 128px;
   background-color: $vuecolor;
   text-align: center;
+  cursor: pointer;
   img {
     margin-top: 20px;
     width: 40px;
@@ -276,16 +277,89 @@ Media query
 }
 
 @media screen and (max-width: 800px) {
+    /*　画面サイズが800pxまではここを読み込む　*/
+  .p-link-top {
+    width: 96px;
+    height: 64px;
+    img {
+      margin-top: 10px;
+      width: 24px;
+      height: 24px;
+    }
+    span {
+      font-size: 16px;
+    }
+  }
+
+  .p-h-profile-box {
+    padding: 0 6vw;
+    border: none;
+  }
+
+  .p-h-english-name {
+    font-size: 72px;
+    margin-top: 64px;
+    margin-bottom: 16px;
+  }
+
+  .p-h-japanese-name {
+    font-size: 24px;
+    margin-bottom: 40px;
+  }
+
+  .p-h-email {
+    font-size:16px;
+    margin-bottom: 120px;
+  }
+
+  .p-h-history-wrapper {
+    display: block;
+    padding-bottom: 48px;
+  }
+
+  .p-h-history-title {
+    h3 {
+      font-size: 16px;
+      font-weight: 900;
+      margin: 4px auto 8px;
+    }
+    h4 {
+      font-size: 16px;
+      margin-bottom: 16px;
+    }
+  }
+
+  .p-h-history-detail {
+    padding-left: 0;
+    font-size: 14px;
+    line-height: 1.5em;
+    padding-bottom: 80px;
+  }
+
+  .p-h-upper-box {
+    border: none;
+  }
+  
+  .p-h-lower-box {
+    border:none;
+  }
+
   .p-c-box-1 {
     height: 60vw;
+    border:none;
   }
 
   .p-c-box-2 {
     height: 80vw;
+    border:none;
   }
 
   .p-c-box-3 {
     height: 100vw;
+    border:none;
+  }
+  .p-u-box-img {
+    vertical-align: bottom;
   }
   .p-u-hover-comment {
     position: absolute;
@@ -294,6 +368,5 @@ Media query
     opacity: 1;
     color: $black;
     background-color: rgba(255, 255, 255, 0.8);
-    border-left: 6px solid $black;
   }
 }
