--- a/docs/scss/utilities.scss
+++ b/docs/scss/utilities.scss
@@ -21,3 +21,13 @@
     padding-bottom: 8px;
   }
 }
+
+@media screen and (max-width: 800px) {
+  /*　画面サイズが800pxまではここを読み込む　*/
+  .u-border {
+    border: none;
+  }
+  .u-border-content {
+    border: none;
+  }
+}
