--- a/docs/scss/layouts.scss
+++ b/docs/scss/layouts.scss
@@ -58,6 +58,10 @@
 }
 
 @media screen and (max-width: 800px) {
+  .l-link-top {
+    margin-bottom: 24px;
+  }
+
   .l-header-grid {
     width: 100%;
     height: auto;
