hover-comment del z-ind

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -92,7 +92,8 @@ video {
   font: inherit;
   text-decoration: none;
   vertical-align: baseline;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 article,
 aside,
@@ -105,34 +106,41 @@ hgroup,
 menu,
 nav,
 section {
-  display: block; }
+  display: block;
+}
 
 body {
-  line-height: 1; }
+  line-height: 1;
+}
 
 ol,
 ul {
-  list-style: none; }
+  list-style: none;
+}
 
 blockquote,
 q {
-  quotes: none; }
+  quotes: none;
+}
 
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
   content: "";
-  content: none; }
+  content: none;
+}
 
 table {
   border-collapse: collapse;
-  border-spacing: 0; }
+  border-spacing: 0;
+}
 
 button,
 select,
 textarea {
-  outline: none; }
+  outline: none;
+}
 
 /*
 colors, font-styles
@@ -145,14 +153,16 @@ prefix: .l-
 ========================================================
 */
 .l-wrapper {
-  width: 100%; }
+  width: 100%;
+}
 
 .l-link-top {
   position: fixed;
   bottom: 0;
   right: 0;
   margin-bottom: 32px;
-  z-index: 10; }
+  z-index: 10;
+}
 
 .l-header-grid {
   width: 100vw;
@@ -161,21 +171,25 @@ prefix: .l-
   max-height: 800px;
   margin: 0 auto;
   display: grid;
-  grid-template-rows: 50% 50%;
-  grid-template-columns: 60% 1fr;
-  overflow: hidden; }
+  grid-auto-rows: 50% 50%;
+  grid-auto-columns: 60% 1fr;
+  overflow: hidden;
+}
 
 .l-header-profile-box {
   grid-row: 1 / 3;
-  grid-column: 1 / 2; }
+  grid-column: 1 / 2;
+}
 
 .l-header-content-upper-box {
   grid-row: 1 / 2;
-  grid-column: 2 / 3; }
+  grid-column: 2 / 3;
+}
 
 .l-header-content-lower-box {
   grid-row: 2 / 3;
-  grid-column: 2 / 3; }
+  grid-column: 2 / 3;
+}
 
 .l-contents-flex {
   width: 100vw;
@@ -183,45 +197,59 @@ prefix: .l-
   margin: 0 auto;
   display: flex;
   justify-content: center;
-  z-index: 5; }
+  z-index: 5;
+}
 
 .l-contents-box-left {
-  width: 30%; }
+  width: 30%;
+}
 
 .l-contents-box-middle {
-  width: 30%; }
+  width: 30%;
+}
 
 .l-contents-box-right {
-  width: 40%; }
+  width: 40%;
+}
 
 @media screen and (max-width: 800px) {
   .l-link-top {
-    margin-bottom: 24px; }
+    margin-bottom: 24px;
+  }
   .l-header-grid {
     width: 100%;
     height: auto;
     max-height: none;
     display: block;
-    overflow: hidden; }
+    overflow: hidden;
+  }
   .l-header-profile-box {
     width: 100%;
-    height: auto; }
+    height: auto;
+  }
   .l-header-content-upper-box {
     width: 100%;
-    height: auto; }
+    height: auto;
+  }
   .l-header-content-lower-box {
     width: 100%;
-    height: auto; }
+    height: auto;
+  }
   .l-contents-flex {
     width: 100%;
     margin: 0 auto;
-    display: block; }
+    display: block;
+  }
   .l-contents-box-left {
-    width: 100%; }
+    width: 100%;
+  }
   .l-contents-box-middle {
-    width: 100%; }
+    width: 100%;
+  }
   .l-contents-box-right {
-    width: 100%; } }
+    width: 100%;
+  }
+}
 
 /*
 objects
@@ -232,21 +260,25 @@ components
 prefix: .c-
 */
 a {
-  color: #f58e00; }
+  color: #f58e00;
+}
 
 a:hover {
   color: #fbc883;
-  transition: 2ms; }
+  transition: 2ms;
+}
 
 a:visited {
-  color: #7000c2; }
+  color: #7000c2;
+}
 
 /*
 projects
 prefix: .c-
 */
 html {
-  background-color: #fff; }
+  background-color: #fff;
+}
 
 /*
 ======================================
@@ -257,17 +289,20 @@ back to top button
   height: 128px;
   background-color: #41b883;
   text-align: center;
-  cursor: pointer; }
-  .p-link-top img {
-    margin-top: 20px;
-    width: 40px;
-    height: 40px; }
-  .p-link-top span {
-    color: #fff;
-    font-family: "Lato", sans-serif;
-    font-size: 48px;
-    font-weight: 900;
-    margin-left: -5px; }
+  cursor: pointer;
+}
+.p-link-top img {
+  margin-top: 20px;
+  width: 40px;
+  height: 40px;
+}
+.p-link-top span {
+  color: #fff;
+  font-family: "Lato", sans-serif;
+  font-size: 48px;
+  font-weight: 900;
+  margin-left: -5px;
+}
 
 /*
 ======================================
@@ -277,42 +312,50 @@ header profile area
   border-top: 6px solid #000;
   border-left: 6px solid #000;
   background-color: #fff;
-  padding-left: 2vw; }
+  padding-left: 2vw;
+}
 
 .p-h-english-name {
   font-family: "Lato", sans-serif;
   font-size: 96px;
   line-height: 1.2em;
   margin: 1vw auto 8px -3px;
-  color: #000; }
+  color: #000;
+}
 
 .p-h-japanese-name {
   font-family: "Noto Sans JP", sans-serif;
   font-size: 36px;
   font-weight: 100;
   color: #000;
-  margin-bottom: 32px; }
+  margin-bottom: 32px;
+}
 
 .p-h-email {
   font-family: "Lato", sans-serif;
   font-size: 36px;
   font-weight: 100;
   color: #000;
-  margin-bottom: 96px; }
+  margin-bottom: 96px;
+}
 
 .p-h-history-wrapper {
-  display: flex; }
+  display: flex;
+}
 
 .p-h-history-title {
   font-family: "Noto Sans JP", sans-serif;
-  color: #000; }
-  .p-h-history-title h3 {
-    font-size: 24px;
-    font-weight: 900;
-    margin: 4px auto 16px; }
-  .p-h-history-title h4 {
-    font-size: 16px;
-    margin-bottom: 32px; }
+  color: #000;
+}
+.p-h-history-title h3 {
+  font-size: 24px;
+  font-weight: 900;
+  margin: 4px auto 16px;
+}
+.p-h-history-title h4 {
+  font-size: 16px;
+  margin-bottom: 32px;
+}
 
 .p-h-history-detail {
   flex: 1;
@@ -320,19 +363,22 @@ header profile area
   color: #000;
   padding-left: 40px;
   font-size: 16px;
-  line-height: 1.8em; }
+  line-height: 1.8em;
+}
 
 .p-h-upper-box {
   position: relative;
   border-top: 6px solid #000;
   border-left: 6px solid #000;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .p-h-lower-box {
   position: relative;
   border-top: 6px solid #000;
   border-left: 6px solid #000;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 /*
 ======================================
@@ -345,7 +391,8 @@ contains area
   max-height: 400px;
   border-right: 6px solid #000;
   border-bottom: 6px solid #000;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .p-c-box-2 {
   position: relative;
@@ -354,7 +401,8 @@ contains area
   max-height: 600px;
   border-right: 6px solid #000;
   border-bottom: 6px solid #000;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .p-c-box-3 {
   position: relative;
@@ -363,7 +411,8 @@ contains area
   max-height: 800px;
   border-right: 6px solid #000;
   border-bottom: 6px solid #000;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 /*
 ======================================
@@ -375,33 +424,39 @@ universal
   font-weight: 100;
   color: #000;
   padding: 16px;
-  line-height: 1.5em; }
+  line-height: 1.5em;
+}
 
 .p-u-box-title {
   font-family: "Noto Sans JP", sans-serif;
   color: #000;
   padding: 16px;
   line-height: 2em;
-  cursor: pointer; }
-  .p-u-box-title h3 {
-    font-size: 36px;
-    font-weight: 900;
-    margin-bottom: 24px; }
-  .p-u-box-title p {
-    font-size: 16px;
-    font-weight: 100; }
+  cursor: pointer;
+}
+.p-u-box-title h3 {
+  font-size: 36px;
+  font-weight: 900;
+  margin-bottom: 24px;
+}
+.p-u-box-title p {
+  font-size: 16px;
+  font-weight: 100;
+}
 
 .p-u-box-title:hover {
   background-color: #41b883;
   color: #fff;
-  transition: all 0.2s ease-in-out; }
+  transition: all 0.2s ease-in-out;
+}
 
 .p-u-box-img {
   width: 100%;
   height: 100%;
   overflow: hidden;
   object-fit: cover;
-  transition: all 0.2s ease-in-out; }
+  transition: all 0.2s ease-in-out;
+}
 
 .p-u-hover-comment {
   position: absolute;
@@ -409,7 +464,6 @@ universal
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 3;
   font-family: "Noto Sans JP", sans-serif;
   font-size: 16px;
   line-height: 1.5em;
@@ -418,16 +472,20 @@ universal
   padding: 16px;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
-  opacity: 0; }
+  opacity: 0;
+}
 
 .p-u-hover-comment:hover {
-  opacity: 1; }
+  opacity: 1;
+}
 
 .p-u-scale {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .p-u-scale:hover {
-  transform: scale(1.1); }
+  transform: scale(1.1);
+}
 
 /*
 =============================================================
@@ -436,104 +494,136 @@ Media query
 @media screen and (max-width: 1260px) {
   /*　画面サイズが1260pxまではここを読み込む　*/
   .p-h-english-name {
-    font-size: 32px; }
+    font-size: 32px;
+  }
   .p-h-japanese-name {
     font-size: 28px;
-    margin-bottom: 8px; }
+    margin-bottom: 8px;
+  }
   .p-h-email {
     font-size: 16px;
-    margin-bottom: 24px; }
+    margin-bottom: 24px;
+  }
   .p-h-history-wrapper {
-    display: block; }
+    display: block;
+  }
   .p-h-history-title h3 {
     font-size: 16px;
     font-weight: 900;
-    margin: 4px auto 8px; }
+    margin: 4px auto 8px;
+  }
   .p-h-history-title h4 {
     font-size: 16px;
-    margin-bottom: 16px; }
+    margin-bottom: 16px;
+  }
   .p-h-history-detail {
     padding-left: 0px;
     font-size: 14px;
     line-height: 1.5em;
-    padding-bottom: 16px; }
+    padding-bottom: 16px;
+  }
   .p-u-box-text {
     font-size: 14px;
     padding: 8px;
-    line-height: 1.3em; }
+    line-height: 1.3em;
+  }
   .p-u-box-title {
-    padding: 8px; }
-    .p-u-box-title h3 {
-      font-size: 24px;
-      margin-bottom: 16px; }
-    .p-u-box-title p {
-      font-size: 14px; }
+    padding: 8px;
+  }
+  .p-u-box-title h3 {
+    font-size: 24px;
+    margin-bottom: 16px;
+  }
+  .p-u-box-title p {
+    font-size: 14px;
+  }
   .p-u-hover-comment {
     font-size: 14px;
     line-height: 1.3em;
-    padding: 8px; } }
+    padding: 8px;
+  }
+}
 
 @media screen and (max-width: 800px) {
   /*　画面サイズが800pxまではここを読み込む　*/
   .p-link-top {
     width: 96px;
-    height: 64px; }
-    .p-link-top img {
-      margin-top: 10px;
-      width: 24px;
-      height: 24px; }
-    .p-link-top span {
-      font-size: 16px; }
+    height: 64px;
+  }
+  .p-link-top img {
+    margin-top: 10px;
+    width: 24px;
+    height: 24px;
+  }
+  .p-link-top span {
+    font-size: 16px;
+  }
   .p-h-profile-box {
     padding: 0 6vw;
-    border: none; }
+    border: none;
+  }
   .p-h-english-name {
     font-size: 72px;
     margin-top: 64px;
-    margin-bottom: 16px; }
+    margin-bottom: 16px;
+  }
   .p-h-japanese-name {
     font-size: 24px;
-    margin-bottom: 40px; }
+    margin-bottom: 40px;
+  }
   .p-h-email {
     font-size: 16px;
-    margin-bottom: 120px; }
+    margin-bottom: 120px;
+  }
   .p-h-history-wrapper {
     display: block;
-    padding-bottom: 48px; }
+    padding-bottom: 48px;
+  }
   .p-h-history-title h3 {
     font-size: 16px;
     font-weight: 900;
-    margin: 4px auto 8px; }
+    margin: 4px auto 8px;
+  }
   .p-h-history-title h4 {
     font-size: 16px;
-    margin-bottom: 16px; }
+    margin-bottom: 16px;
+  }
   .p-h-history-detail {
     padding-left: 0;
     font-size: 14px;
     line-height: 1.5em;
-    padding-bottom: 80px; }
+    padding-bottom: 80px;
+  }
   .p-h-upper-box {
-    border: none; }
+    border: none;
+  }
   .p-h-lower-box {
-    border: none; }
+    border: none;
+  }
   .p-c-box-1 {
     height: 60vw;
-    border: none; }
+    border: none;
+  }
   .p-c-box-2 {
     height: 80vw;
-    border: none; }
+    border: none;
+  }
   .p-c-box-3 {
     height: 100vw;
-    border: none; }
+    border: none;
+  }
   .p-u-box-img {
-    vertical-align: bottom; }
+    vertical-align: bottom;
+  }
   .p-u-hover-comment {
     position: absolute;
     left: 50%;
     width: 50%;
     opacity: 1;
     color: #000;
-    background-color: rgba(255, 255, 255, 0.8); } }
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+}
 
 /*
 projects
@@ -541,26 +631,35 @@ prefix: .u-
 
 */
 .u-border {
-  border-right: 6px solid #000; }
+  border-right: 6px solid #000;
+}
 
 .u-border-content {
   border-top: 6px solid #000;
-  border-left: 6px solid #000; }
+  border-left: 6px solid #000;
+}
 
 .u-pdg-64-btm {
-  padding-bottom: 64px; }
+  padding-bottom: 64px;
+}
 
 .u-mgn-2vw-btm {
-  margin-bottom: 2vw; }
+  margin-bottom: 2vw;
+}
 
 @media screen and (max-width: 1260px) {
   /*　画面サイズが1260pxまではここを読み込む　*/
   .u-pdg-64-btm {
-    padding-bottom: 8px; } }
+    padding-bottom: 8px;
+  }
+}
 
 @media screen and (max-width: 800px) {
   /*　画面サイズが800pxまではここを読み込む　*/
   .u-border {
-    border: none; }
+    border: none;
+  }
   .u-border-content {
-    border: none; } }
+    border: none;
+  }
+}
