--- a/docs/scss/layouts.scss
+++ b/docs/scss/layouts.scss
@@ -17,8 +17,8 @@
   max-height: 800px;
   margin: 0 auto;
   display: grid;
-  grid-template-rows: 50% 50%;
-  grid-template-columns: 60% 1fr;
+  grid-auto-rows: 50% 50%;
+  grid-auto-columns: 60% 1fr;
   overflow: hidden;
 }
 
