--- a/docs/scss/layouts.scss
+++ b/docs/scss/layouts.scss
@@ -15,6 +15,7 @@
   height: 40vw;
   max-width: 2000px;
   max-height: 800px;
+  min-height: 500px;
   margin: 0 auto;
   display: grid;
   grid-auto-rows: 50% 50%;
